Reset the height for the hsplit category to "auto" to ensure no gaps are made (other than the ones made by the grid-gap property)

--- a/public/styles/03_styles-other/02_misc.css
+++ b/public/styles/03_styles-other/02_misc.css
@@ -10,8 +10,7 @@
 .hsplit {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 2vw;
-    height: 100%;
+    height: auto;
 }
 
 /* Styles for fading in text on page load */
